# serv_ClipGuard

./: CMakeLists.txt  CMakeSettings.json  README.md  api_server.py  client.cpp  clipboard_monitor.cpp  common.h  database.h  db_config.h  requirements.txt  schema.sql  server.cpp
